openturns/1.20/_sources/auto_reliability_sensitivity/design_of_experiments/index.rst.txt


.. _sphx_glr_auto_reliability_sensitivity_design_of_experiments:

.. _Design of experiments:

Design of experiments
---------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a composite design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_composite_experiment_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_composite_experiment.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a composite design of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a Monte Carlo design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_monte_carlo_experiment_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_monte_carlo_experiment.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a Monte Carlo design of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Probabilistic design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_probabilistic_design_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_probabilistic_design.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Probabilistic design of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a Gauss product design">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_gauss_product_experiment_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_gauss_product_experiment.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a Gauss product design</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a random design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_create_random_doe_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_create_random_doe.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a random design of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create mixed deterministic and probabilistic designs of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_mixed_design_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_mixed_design.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create mixed deterministic and probabilistic designs of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a design of experiments with discrete and continuous variables">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_design_of_experiment_continuous_discrete_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_design_of_experiment_continuous_discrete.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a design of experiments with discrete and continuous variables</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The goal of this example is to present the features of the PlotDesign static method.">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_plot_design_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_plot_design.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">The PlotDesign method</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Deterministic design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_deterministic_design_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_deterministic_design.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Deterministic design of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a deterministic design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_create_deterministic_doe_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_create_deterministic_doe.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a deterministic design of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Various design of experiments in OpenTURNS">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_design_of_experiments_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_design_of_experiments.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Various design of experiments in OpenTURNS</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Generate low discrepancy sequences">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_low_discrepancy_sequence_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_low_discrepancy_sequence.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Generate low discrepancy sequences</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Optimize an LHS design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_optimal_lhs_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_optimal_lhs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Optimize an LHS design of experiments</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_composite_experiment
   /auto_reliability_sensitivity/design_of_experiments/plot_monte_carlo_experiment
   /auto_reliability_sensitivity/design_of_experiments/plot_probabilistic_design
   /auto_reliability_sensitivity/design_of_experiments/plot_gauss_product_experiment
   /auto_reliability_sensitivity/design_of_experiments/plot_create_random_doe
   /auto_reliability_sensitivity/design_of_experiments/plot_mixed_design
   /auto_reliability_sensitivity/design_of_experiments/plot_design_of_experiment_continuous_discrete
   /auto_reliability_sensitivity/design_of_experiments/plot_plot_design
   /auto_reliability_sensitivity/design_of_experiments/plot_deterministic_design
   /auto_reliability_sensitivity/design_of_experiments/plot_create_deterministic_doe
   /auto_reliability_sensitivity/design_of_experiments/plot_design_of_experiments
   /auto_reliability_sensitivity/design_of_experiments/plot_low_discrepancy_sequence
   /auto_reliability_sensitivity/design_of_experiments/plot_optimal_lhs

